@@ -9,8 +9,12 @@ DIST gitlab-ci-multi-runner-1.5.0-x86 36892864 SHA256 029e1a570ff5f5f570d107cb45
 DIST gitlab-ci-multi-runner-1.6.0-amd64 81450584 SHA256 09dbfd1770253e4216de45e3de359707b9e48d1cd406fe7a7108f0d46880f9c8 SHA512 03c0f1a364509fceaea7c3250885f1d65349cc7b3b9febcb2b67f300b371fcf307f2e44f8c7da57776c05c57c350685459b0167f9dfe1d239d3c472d674dc35e WHIRLPOOL 80dd59f5343efd4a3f0278e66bb1ec7f9b64ed6c16580a9ea9c0554469bf668a7a1553c70e79ffe25e18fe6bea61d219112509ef30c38dc8cb56c4fccc4e37a4
 DIST gitlab-ci-multi-runner-1.6.0-arm 71394024 SHA256 ce42d293752d2781f1d657da6489ebf6f8df610df72742f144004fd12bf88cac SHA512 d23a95d367a9b68fc456fe67a7f243a824f0d1ddb5015740ede83297d328d31e34203ba4d49bac87a81bdefde1ae9aca401016777aaae33c9a4965441ae05381 WHIRLPOOL 8c0a70aab601d785400d1f0993581f41243ac4c01618cd8ff5dc60229cf2184a76adf7e9a1cc1b6ed99392a1aeb17177909dc78d877f71a4126a0990e57b6b8f
 DIST gitlab-ci-multi-runner-1.6.0-x86 72066176 SHA256 ab59163f79e327a1bf6a6d1469762d1f113484b561c6c4dcc07fda127068d9f4 SHA512 ce9eb72e86bd9a2ccd40be585b8f4645d7eb471a4b35a79b4c91dedb95611162c60f2a5e098774ac0879d1dd97f98431372e47e9c5152971d11591a502b0e96f WHIRLPOOL b05f559e04756f2f7cd05a833dbdabf008a98cf1314a81021c76d1c9c2afd4df7d1d5f4c2a585ef97f72dfeef84f2c01e8a6cabba8b018e1ab99ae7ff106b3f4
+DIST gitlab-ci-multi-runner-1.7.0-amd64 68204551 SHA256 367ed93a9b37026bf1679d43e1d150c7edda151e5c5807e43a0b85706a368de6 SHA512 f516046b29b16ba51e9124aa6e2d97bf549628567cafe3e72c49160945f39ac954a31e7460460b06119b8baa59e3724c515aa6635f8cc7e845cfc4e647ca66bf WHIRLPOOL 25f41cbeff6d441bfd11d6cc2b335d594f67c2f995268fd2a65f2da021792abcb9877adcf8f27d33194ad8dcbcc26d96b3b86d193e448143d717ac6b9dd973c6
+DIST gitlab-ci-multi-runner-1.7.0-arm 64871891 SHA256 b30873ec3fbc1510fdd92e64afb1cd5bc11db295eb5da7d4d4931211a40d4d8d SHA512 0988ef4bbae45e114eed98a6bc47284df26b4d283aeda5ae6be17a79d7bc416e060234e30592c8d44804ee56cbdd45be33777edd4cde4f8a4cc101516aff613c WHIRLPOOL 77fd1538e7e7a1513e2b31ccc9998fb5aea95c974808ca4f56a3e60bcb37f216a37b1ca0ead5d826ccb8712a0554baee300d5fe845bf9fcdd6094be6a0e177ee
+DIST gitlab-ci-multi-runner-1.7.0-x86 64635954 SHA256 4028364f26e9169f04e37beb404aebfaa5f0ad2560e6dccda302f9acd73e47a5 SHA512 56fea1b4b5de617b998c998edeb914eb0500de597fead2c37bd81526b48822c84a49c8263567c2f3ece3d2bab50287162b66fbeec5c0f9e1e2159c115a6c14ed WHIRLPOOL 3238e95cbd742b7057c224fb8d0a7511f7dcb0d1c0b07e446d2f0a4f6c7f4e6646e9b1c54cb14cd29c479efbaf113e5e501da54538983307ab8c3f350a36dac3
 EBUILD gitlab-ci-multi-runner-1.4.1.ebuild 2355 SHA256 c911b16ed3d1ff2ade77818f80e5e307f539a0dfad4647f6d2e242e970ca9bc2 SHA512 dd3b949a6494868e584655ede760a92e4a1084cb611b32c26c7850cc9c025860ac8814d94be58e43789137e5451cf633146d302d31c20a683cc7a2760ff84635 WHIRLPOOL bb1ee49e3ca9cc400dc1e11232f45acc51e9f47384742745ea01a709ae3e39f21b497948ef9a43ab5803e43c3c59c6770eba1169ef059d672296c3d9183f3da6
 EBUILD gitlab-ci-multi-runner-1.5.0.ebuild 2355 SHA256 ad37bca040f73fffda558d935f2cb1204c7c3d467c8c07f11d225bef813a4cb6 SHA512 87673b36f8a2c9fa872e5a55955c30c84c7664b2f2a3a9e3c293782747e71808651916e2dc8ce2c9f7aab319c06b5f2703c505e33303eebb2f3aec4369426415 WHIRLPOOL 3b000513d51581fa400699625e4dd3c949516df0cebdcb57b7c86ab9fdc01c0947934c7205ef31a8245fa1b8aaa7805211d5fbe4e5fc930f0de62c11e2dfe6f8
 EBUILD gitlab-ci-multi-runner-1.6.0.ebuild 2355 SHA256 d7afebafb33a353927ec7ea9eb45dfa0e55481ea84f8ebc1dccb735769225a0e SHA512 ba76ee30891ad1f6bce1c7f7982a9b6f3a5dfb1b6747c32703d3980a6f5966c6185a16f4bc4cf545a88fa962e64f91dfae26c7a8537bb8b79e3328313d9e42b6 WHIRLPOOL 292337cc95bb7376a2a88d8cf0056b2eaf807b784d3a81c22235680fafaf69b642a838d2a2d87826093d94c5399c79e0d5cda4afb101725927da51e55c18f63e
-MISC ChangeLog 2091 SHA256 e9dadd00fe3fd94f6f4ea22838524799f0ea0e7c2e09b39ae67fca4904cb4bcd SHA512 ffc717dde105c3f6b85b57ad80f931889eee50bd3130c4eef478f0ac11e647419ffcf601810f9826d7783790b2748eb267b96f20518a1328815e728557a29d31 WHIRLPOOL 265501ce5b4bf72e7898673f7c24ef467c4d469d45a61ee58fd7df1a39683a6e464eb38a541be219453fb576e0965d63bf5bb8ebc217e3abbf99eb29902e5c3c
+EBUILD gitlab-ci-multi-runner-1.7.0.ebuild 2355 SHA256 d7afebafb33a353927ec7ea9eb45dfa0e55481ea84f8ebc1dccb735769225a0e SHA512 ba76ee30891ad1f6bce1c7f7982a9b6f3a5dfb1b6747c32703d3980a6f5966c6185a16f4bc4cf545a88fa962e64f91dfae26c7a8537bb8b79e3328313d9e42b6 WHIRLPOOL 292337cc95bb7376a2a88d8cf0056b2eaf807b784d3a81c22235680fafaf69b642a838d2a2d87826093d94c5399c79e0d5cda4afb101725927da51e55c18f63e
+MISC ChangeLog 2294 SHA256 d449d54ce814dc2fcfb5efab396ebd907f591036e2033db4e27ba5fb5aa555e4 SHA512 0c6e692dc0495aaefcfdbe1c5d4a99679af5b389a51985732f4285d698584f07398db7b6847526ecd2c01feabae6d4c88820c49105f8d77d72cd3aade5e40b61 WHIRLPOOL 53d6c347f27b7a6c634bf34e07fc1fbc9b637ab2b117fbdd6069b42b0f7955a1157011954bbfba368a6c830fd231dcc1ace542499e56cc5c2b98c224d94d41e5
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
